# ipfce-2024-classroom-assignment-4-285191U013-IPFCE-assignment-4

./: CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json
include/: average.h  counter.h  get_min.h  longest_seq.h  reverse.h
src/: average.c  counter.c  get_min.c  loanRepayment.c  longest_seq.c  reverse.c
tests/: tests.cpp
